--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,18 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="style.css">
 
+    <script type="application/ld+json">
+    {
+      "@context": "http://www.schema.org",
+      "@type": "person",
+      "name": "Karl Laurentius Roos",
+      "jobTitle": "Founder at Statehill, Inc",
+      "url": "https://klr.io/",
+      "email": "karlroos93@gmail.com",
+      "birthDate": "1993-09-30"
+    }
+    </script>
+
 </head>
 <body>
 
@@ -20,7 +32,7 @@
 
         <p>I co-founded <a href="https://statehill.com">Statehill</a> and <a href="https://piclike.us">Piclike</a>. I love writing code, exploring menswear, discussing politics, playing golf and watching sports.</p>
 
-        <p>I have my resume on <a href="http://www.linkedin.com/profile/view?id=23160720">LinkedIn</a>, push code to <a href="https://github.com/klr">GitHub</a>, find answers to all the big questions in life on <a href="http://stackoverflow.com/users/517616/karl-laurentius-roos">Stack Overflow</a>, upload drunken images to <a href="https://www.facebook.com/karlroos">Facebook</a>, take photos of steak tartare and beer with fancy filters on <a href="http://instagram.com/karlroos">Instagram</a>, tweet about politics and express random thoughts on <a href="https://twitter.com/karlroos">Twitter</a>, check in with <a href="https://foursquare.com/karlroos">Swarm</a>, log my divots with <a href="http://golfshot.com/members/0376001110/statistics">Golfshot</a>, sweat it out with <a href="http://runkeeper.com/user/karlroos/profile">RunKeeper</a>, keep track of what shows I watch on <a href="http://followmy.tv/u/klr">Followmy.tv</a>, listen to music with <a href="https://open.spotify.com/user/karlroos">Spotify</a> and scrobble to
+        <p>I have my resume on <a href="https://www.linkedin.com/in/karlroos">LinkedIn</a>, push code to <a href="https://github.com/klr">GitHub</a>, find answers to all the big questions in life on <a href="http://stackoverflow.com/users/517616/karl-laurentius-roos">Stack Overflow</a>, upload drunken images to <a href="https://www.facebook.com/karlroos">Facebook</a>, take photos of steak tartare and beer with fancy filters on <a href="http://instagram.com/karlroos">Instagram</a>, tweet about politics and express random thoughts on <a href="https://twitter.com/karlroos">Twitter</a>, check in with <a href="https://foursquare.com/karlroos">Swarm</a>, log my divots with <a href="http://golfshot.com/members/0376001110/statistics">Golfshot</a>, sweat it out with <a href="http://runkeeper.com/user/karlroos/profile">RunKeeper</a>, keep track of what shows I watch on <a href="http://followmy.tv/u/klr">Followmy.tv</a>, listen to music with <a href="https://open.spotify.com/user/karlroos">Spotify</a> and scrobble to
         <a href="http://last.fm/user/karlroos">Last.fm</a>. Occasionally I might play a game or two on <a href="https://my.playstation.com/karlroos">PlayStation</a> or <a href="http://steamcommunity.com/id/kl_r/">Steam</a></p>
 
         <p>I'm a digital native and if none of the services above cut it you can always reach me by <a href="mailto:karlroos93@gmail.com">e-mail</a> or securely by <a href="mailto:klr@protonmail.ch">ProtonMail</a>.</p>
