--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
 
         <p>I have my resume on <a href="https://www.linkedin.com/in/karlroos">LinkedIn</a>, push code to <a href="https://github.com/klr">GitHub</a>, find answers to all the big questions in life on <a href="http://stackoverflow.com/users/517616/karl-laurentius-roos">Stack Overflow</a>, write stories on <a href="https://medium.com/@karlroos">Medium</a>, stalk my friends on <a href="https://www.facebook.com/karlroos">Facebook</a>, take photos of steak tartare and beer with fancy filters on <a href="http://instagram.com/karlroos">Instagram</a>, tweet about politics and express random thoughts on <a href="https://twitter.com/karlroos">Twitter</a>, check in with <a href="https://foursquare.com/karlroos">Swarm</a>, log my divots with <a href="http://golfshot.com/members/0376001110/statistics">Golfshot</a> and listen to music on <a href="https://open.spotify.com/user/karlroos">Spotify</a>. Occasionally I play a game or two on <a href="https://my.playstation.com/profile/karlroos">PlayStation</a> or <a href="http://steamcommunity.com/id/kl_r/">Steam</a>.</p>
 
-        <p>To get in touch please use <a href="https://earn.com/karlroos/">Earn</a> if you’re outside my network. I'm also available on regular <a href="mailto:karlroos93@gmail.com">e-mail</a> or securely using <a href="mailto:klr@protonmail.ch">ProtonMail</a>.</p>
+        <p>Get in touch with me over <a href="mailto:karlroos93@gmail.com">e-mail</a> or securely using <a href="mailto:klr@protonmail.ch">ProtonMail</a>.</p>
 
     </section>
 
