--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,6 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0">
-    <meta name="description" content="I'm Karl Laurentius Roos.">
 
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -16,7 +15,6 @@
       "@context": "http://www.schema.org",
       "@type": "person",
       "name": "Karl Laurentius Roos",
-      "jobTitle": "Founder at Statehill, Inc",
       "url": "https://klr.io/",
       "email": "karlroos93@gmail.com",
       "birthDate": "1993-09-30"
@@ -28,13 +26,11 @@
 
     <section>
 
-        <h1>Hi, I'm Karl.</h1>
+        <h1>Karl Laurentius Roos</h1>
 
-        <p>I co-founded <a href="https://statehill.com">Statehill</a> and now work with product at <a href="https://politico.eu">POLITICO</a>. I enjoy writing code, discussing politics, playing golf and watching sports.</p>
+        <p>Technology at <a href="https://politico.eu">POLITICO Europe</a>, former founder of <a href="https://statehill.com">Statehill</a>.</p>
 
-        <p>I have my resume on <a href="https://www.linkedin.com/in/karlroos">LinkedIn</a>, push code to <a href="https://github.com/klr">GitHub</a>, find answers to all the big questions in life on <a href="http://stackoverflow.com/users/517616/karl-laurentius-roos">Stack Overflow</a>, write stories on <a href="https://medium.com/@karlroos">Medium</a>, stalk my friends on <a href="https://www.facebook.com/karlroos">Facebook</a>, take photos of steak tartare and beer with fancy filters on <a href="http://instagram.com/karlroos">Instagram</a>, tweet about politics and express random thoughts on <a href="https://twitter.com/karlroos">Twitter</a>, check in with <a href="https://foursquare.com/karlroos">Swarm</a>, log my divots with <a href="http://golfshot.com/members/0376001110/statistics">Golfshot</a> and listen to music on <a href="https://open.spotify.com/user/karlroos">Spotify</a>. Occasionally I play a game or two on <a href="https://my.playstation.com/profile/karlroos">PlayStation</a> or <a href="http://steamcommunity.com/id/kl_r/">Steam</a>.</p>
-
-        <p>Get in touch with me over <a href="mailto:karlroos93@gmail.com">e-mail</a> or securely using <a href="mailto:klr@protonmail.ch">ProtonMail</a>.</p>
+        <p><a href="https://twitter.com/karlroos/">Twitter</a>&nbsp;&nbsp;&nbsp;<a href="https://www.linkedin.com/in/karlroos/">LinkedIn</a>&nbsp;&nbsp;&nbsp;<a href="https://github.com/klr">GitHub</a>&nbsp;&nbsp;&nbsp;<a href="mailto:karlroos93@gmail.com">e-mail</a></p>
 
     </section>
 
