chore: updated copy (left politico)

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
 
         <h1>Karl Laurentius Roos</h1>
 
-        <p>Technology at <a href="https://politico.eu">POLITICO Europe</a>, former founder of <a href="https://statehill.com">Statehill</a>.</p>
+        <p>Technology & Product. Founded <a href="https://statehill.com">Statehill</a>, acquired by <a href="https://politico.eu">POLITICO Europe</a>.</p>
 
         <p><a href="https://twitter.com/karlroos/">Twitter</a>&nbsp;&nbsp;&nbsp;<a href="https://www.linkedin.com/in/karlroos/">LinkedIn</a>&nbsp;&nbsp;&nbsp;<a href="https://github.com/klr">GitHub</a>&nbsp;&nbsp;&nbsp;<a href="mailto:karlroos93@gmail.com">e-mail</a></p>
 
