--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0">
 
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <style>
+      @import "./style.css";
+    </style>
 
     <script type="application/ld+json">
     {
