--- a/src/index.html
+++ b/src/index.html
@@ -1,39 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <title>Karl Laurentius Roos</title>
 
-    <title>Karl Laurentius Roos</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Personal website of Karl Laurentius Roos">
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+  @import "./style.css";
+  </style>
 
-    <style>
-      @import "./style.css";
-    </style>
-
-    <script type="application/ld+json">
-    {
-      "@context": "http://www.schema.org",
-      "@type": "person",
-      "name": "Karl Laurentius Roos",
-      "url": "https://klr.io/",
-      "email": "karlroos93@gmail.com",
-      "birthDate": "1993-09-30"
-    }
-    </script>
-
+  <script type="application/ld+json">
+  {
+    "@context": "http://www.schema.org",
+    "@type": "person",
+    "name": "Karl Laurentius Roos",
+    "url": "https://klr.io/",
+    "email": "karlroos93@gmail.com",
+    "birthDate": "1993-09-30"
+  }
+  </script>
 </head>
 <body>
+  <section>
+    <h1>Karl Laurentius Roos</h1>
 
-    <section>
+    <p>Technology & Product. Founded <a href="https://statehill.com">Statehill</a>, acquired by <a href="https://politico.eu">POLITICO Europe</a>.</p>
 
-        <h1>Karl Laurentius Roos</h1>
-
-        <p>Technology & Product. Founded <a href="https://statehill.com">Statehill</a>, acquired by <a href="https://politico.eu">POLITICO Europe</a>.</p>
-
-        <p><a href="https://twitter.com/karlroos/">Twitter</a>&nbsp;&nbsp;&nbsp;<a href="https://www.linkedin.com/in/karlroos/">LinkedIn</a>&nbsp;&nbsp;&nbsp;<a href="https://github.com/klr">GitHub</a>&nbsp;&nbsp;&nbsp;<a href="mailto:karlroos93@gmail.com">e-mail</a></p>
-
-    </section>
-
+    <p><a href="https://twitter.com/karlroos/">Twitter</a>&nbsp;&nbsp;&nbsp;<a href="https://www.linkedin.com/in/karlroos/">LinkedIn</a>&nbsp;&nbsp;&nbsp;<a href="https://github.com/klr">GitHub</a>&nbsp;&nbsp;&nbsp;<a href="mailto:karlroos93@gmail.com">e-mail</a></p>
+  </section>
 </body>
 </html>
