--- a/src/index.html
+++ b/src/index.html
@@ -26,9 +26,9 @@
   <section>
     <h1>Karl Laurentius Roos</h1>
 
-    <p>Technology & Product. Founded <a href="https://statehill.com">Statehill</a>, acquired by <a href="https://politico.eu">POLITICO Europe</a>.</p>
+    <p>Technology & Product. Building media experiences at <a href="https://mxy.gmbh">MXY</a>.<br>Founded <a href="https://statehill.com">Statehill</a>, acquired by <a href="https://politico.eu">POLITICO Europe</a>.</p>
 
-    <p><a href="https://twitter.com/karlroos/">Twitter</a>&nbsp;&nbsp;&nbsp;<a href="https://www.linkedin.com/in/karlroos/">LinkedIn</a>&nbsp;&nbsp;&nbsp;<a href="https://github.com/klr">GitHub</a>&nbsp;&nbsp;&nbsp;<a href="mailto:karlroos93@gmail.com">e-mail</a></p>
+    <p><a href="https://x.com/karlroos/">X</a>&nbsp;&nbsp;&nbsp;<a href="https://www.linkedin.com/in/karlroos/">LinkedIn</a>&nbsp;&nbsp;&nbsp;<a href="https://github.com/klr">GitHub</a>&nbsp;&nbsp;&nbsp;<a href="mailto:karlroos93@gmail.com">e-mail</a></p>
   </section>
 </body>
 </html>
