--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
 
     <p>Technology & Product. Building media experiences at <a href="https://mxy.gmbh">MXY</a>. Founded <a href="https://digiday.com/media/politico-europe-grew-subscriptions-business-50-percent-2018/">Statehill</a>, acquired by <a href="https://politico.eu">POLITICO Europe</a>.</p>
 
-    <p><a href="https://x.com/karlroos/">X</a>&nbsp;&nbsp;&nbsp;<a href="https://www.linkedin.com/in/karlroos/">LinkedIn</a>&nbsp;&nbsp;&nbsp;<a href="https://github.com/klr">GitHub</a>&nbsp;&nbsp;&nbsp;<a href="mailto:karlroos93@gmail.com">e-mail</a></p>
+    <p><a href="https://bsky.app/profile/karlroos.bsky.social">bsky</a>&nbsp;&nbsp;&nbsp;<a href="https://x.com/karlroos/">X</a>&nbsp;&nbsp;&nbsp;<a href="https://www.linkedin.com/in/karlroos/">LinkedIn</a>&nbsp;&nbsp;&nbsp;<a href="https://github.com/klr">GitHub</a>&nbsp;&nbsp;&nbsp;<a href="mailto:karlroos93@gmail.com">e-mail</a></p>
   </section>
 </body>
 </html>
